--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@
 
 body {
   display: grid;
-  grid-template-columns: minmax(220px, 1fr) 3fr;
+  grid-template-columns: 250px 3fr;
   grid-template-rows: 180px auto;
   gap: 0;
   grid-template-areas:
